--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,8 +2,11 @@
 interface Props {
   title: string
 }
+import Footer from "../components/server/Footer.astro"
+import Nav from "../components/client/Nav"
 
 const { title } = Astro.props
+const { pathname } = Astro.url
 ---
 
 <!doctype html>
@@ -17,6 +20,8 @@ const { title } = Astro.props
     <title>{title}</title>
   </head>
   <body>
+    <Nav pathname={pathname} client:only />
     <slot />
+    <Footer />
   </body>
 </html>
