mostly transfered to astro

--- a/src/components/server/Hoverlinks.astro
+++ b/src/components/server/Hoverlinks.astro
@@ -13,7 +13,7 @@ const { pathname } = Astro.url
     class={`w-fit hover:text-stone-400 ${
       pathname.includes("/modules") ? "text-stone-400" : null
     }`}
-    href={"/modules?page=1"}>Modules</a
+    href={"/modules/all/1"}>Modules</a
   >
   <a
     class={`w-fit hover:text-stone-400 ${
