restructuring and reinstall

--- a/src/components/server/Hero.astro
+++ b/src/components/server/Hero.astro
@@ -4,9 +4,9 @@ import { Image } from "astro:assets"
 ---
 
 <section class="h-[70dvh] sm:h-[80dvh] relative mb-6">
-  <Image src={herobanner} alt="broken spire logo" class={"h-full"} />
+  <Image src={herobanner} alt="broken spire logo" class={"h-full w-full"} />
   <h1
-    class="absolute bottom-6 right-6 sm:text-7xl text-3xl font-extrabold text-stone-400">
+    class="absolute bottom-6 right-6 sm:text-7xl text-3xl font-extrabold text-stone-100">
     BROKEN SPIRE GAMES
   </h1>
 </section>
