--- a/src/pages/modules/[name].astro
+++ b/src/pages/modules/[name].astro
@@ -9,6 +9,7 @@ export function getStaticPaths() {
 
 const { name } = Astro.params
 const { date, img, dtrpg, summary } = Astro.props
+console.log(Astro.props)
 ---
 
 <Layout title="Broken Spire Games">
