--- a/src/pages/modules/all/[page].astro
+++ b/src/pages/modules/all/[page].astro
@@ -1,10 +1,15 @@
 ---
+import type { PaginateFunction } from "astro"
 import { products } from "../../../../products/products"
 import AllProducts from "../../../components/server/AllProducts.astro"
 import Layout from "../../../layouts/Layout.astro"
 const range = (n: number) => Array.from(Array(n).keys())
 
-export async function getStaticPaths({ paginate }) {
+export async function getStaticPaths({
+  paginate,
+}: {
+  paginate: PaginateFunction
+}) {
   return paginate(products, { pageSize: 10 })
 }
 
