--- a/src/components/server/Statement.astro
+++ b/src/components/server/Statement.astro
@@ -1,6 +1,6 @@
 <section
-  class="min-h-[10dvh] sm:text-4xl text-xl text-center p-2 pb-0 sm:p-10 sm:pb-0 font-serif">
-  <p class="border-y-2 border-black pb-2">
+  class="min-h-[10dvh] sm:text-4xl text-xl text-center p-2 pb-0 sm:p-8 font-bold">
+  <p class="border-y-4 border-stone-400 p-4">
     We at Broken Spire Games are looking to entertain you with only the most
     interesting tabletop content. Immerse yourself and challenge your players to
     a truly fantastical experience.
