--- a/src/components/server/Hero.astro
+++ b/src/components/server/Hero.astro
@@ -3,7 +3,7 @@ import herobanner from "../../images/brokenspirelogo.jpg"
 import { Image } from "astro:assets"
 ---
 
-<section class="h-[70dvh] sm:h-[80dvh] relative mb-6">
+<section class="h-[70dvh] sm:h-[80dvh] relative">
   <Image src={herobanner} alt="broken spire logo" class={"h-full w-full"} />
   <h1
     class="absolute bottom-6 right-6 sm:text-7xl text-3xl font-extrabold text-stone-100">
